--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ img {
     outline: 2px solid #7EB101;
 }
 
-button {
+.button {
     border-radius: 30px;
     background-color: #BBF330;
     min-width: 98px;
@@ -316,6 +316,11 @@ button {
     padding: 0;
 }
 
+.fav-item-div:hover {
+    background-color: #FFE550;
+    border-color: #BBF330;
+}
+
 .fav-item-div {
     display: flex;
     align-items: center;
@@ -454,21 +459,39 @@ button {
     margin-bottom: 24px;
 }
 
-.subscribes-list-small {
+.subscribes-div-small {
     display: flex;
     align-items: center;
     gap: 32px;
 }
 
-.subscribe-text-small {
-    width: 395px;
-    line-height: 24px;
-    padding: 12px 57px 12px 12px;
-    border: 1px solid  #FFE550;
-    border-radius: 30px;
+.subscribe-form-small {
+   
 }
 
-.subscribe-btn {
+.input-form-small::placeholder {
+    color: #505050;
+    font-size: 12px;
+    line-height: 1.5; /* 18px */
+}
+
+.input-form-small {
+    width: 395px;
+    height: 42px;
+    padding: 12px 57px 12px 12px;
+
+    line-height: 1.5;
+    
+    border: 1px solid  #FFE550;
+    border-radius: 30px;
+    background-color: transparent;
+}
+
+.subscribe-button:hover,
+.subscribe-button:focus {
+    background-color: #FFE550;
+}
+.subscribe-button {
     line-height: 19.5px;
     display: inline-flex;
     padding: 11px 22px;
@@ -476,6 +499,8 @@ button {
     align-items: center;
     width: 103px;
     height: 42px;
+    border: none;
+    background-color: #BBF330;
 }
 
 .subscribe-pic {
@@ -529,6 +554,7 @@ button {
     text-decoration-line: underline;
 }
 
+/* footer form */
 
 
 .footer-right-side {
@@ -542,15 +568,19 @@ button {
     
 }
 .footer-form-div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 13px;
     padding: 12px;
 }
 
 .subscribe-form {
-    display: flex;
-    align-items: center;
+    display: block;
+    align-items: flex-start;
     gap: 24px;
-  
-    margin-left: auto;
+    
+   
 }
 
 
@@ -558,21 +588,28 @@ button {
     font-size: 14px;
     font-weight: 500;
     line-height: 1.5;
-    margin-bottom: 12px;
+    
 }
 
-
-.form-btn-div {
-    display: flex;
-    gap: 13px;
-    margin: 0;
-    padding: 0;
-    font-size: 12px;
-    line-height: 18px;
+.subscribe-form-input {
+    margin-top: 12px;
+    width: 100%;
+    height: 42px;
+    padding: 12px 61.5px 12px 12px;
+    align-items: center; 
+    border-radius: 30px;
+    border: 0.854px solid var(--Yellow-main, #FFE550);
+    background: var(--White, #FEFEFE);
 }
 
-subscribe-form-input
+.subscribe-form-input::placeholder {
+    color:  #505050;
+}
 
+.subscribe-btn:hover,
+.subscribe-btn:focus {
+    border-color: #FFE450;
+}
 
 .subscribe-btn {
 
@@ -585,7 +622,7 @@ subscribe-form-input
     font-size: 13px;
     font-weight: 500;
     line-height: 1.5;
-    
+    margin-top: 30px;
 }
 
 .subscribe-text-down {
@@ -603,4 +640,122 @@ subscribe-form-input
     margin: 0;
     margin-top: 80px;
     margin-left: 224px;
+}
+
+
+/* modal */
+.backdrop {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(94, 99, 99, 0.70);
+}
+
+.is-hidden{
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.backdrop.is-open {
+  opacity: 1;
+  visibility:visible;
+  pointer-events: initial;
+}
+
+.modal {
+    width: 458px;
+    border-radius: 30px;
+    background: #FFE550;
+
+    /* Arrow shadow */
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.06);
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    padding: 32px;
+}
+
+
+.modal-close-btn {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    padding: 0;
+    line-height: 0;
+
+    height: 32px;
+    width: 32px;
+
+    background-color: #FFF;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.06));
+    cursor: pointer;
+    border: transparent;
+    border-radius: 50%;
+}
+.close-btn-icon{}
+
+.modal-form {
+}
+.modal-title {
+    color: var(--Black, #2C2C2C);
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 1.2; /* 28.8px */
+    margin-bottom: 20px;
+}
+.modal-field {
+    margin-bottom: 24px;
+}
+.modal-lable {
+    display: block;
+    margin-bottom: 2px;
+    margin-left: 12px;
+
+    color: var(--Black, #2C2C2C);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.4; /* 22.4px */
+}
+.modal-input {
+    width: 100%;
+    height: 48px;
+    outline: transparent;
+
+    padding-left: 12px;
+
+    border-radius: 30px;
+    border: 1px solid rgba(18, 18, 18, 0.12);
+    background: #FFF;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15) inset;
+}
+
+.modal-input:focus{
+    border-color: #7EB101;
+}
+.modal-send-btn {
+    display: block;
+    min-width: 106px;
+    height: 40px;
+
+    color: var(--Black, #2C2C2C);
+    font-size: 13px;
+    font-weight: 500;
+    line-height: 1.5; /* 19.5px */
+    cursor: pointer;
+    margin: 0 auto;
+
+    border-radius: 30px;
+    border: 2px solid var(--Dark-green, #7EB101);
+    background: #FFF;
+}
+
+.modal-send-btn:hover,
+.modal-send-btn:focus{
+    background: var(--Button-green, #BBF330);
 }
