--- a/css/styles.css
+++ b/css/styles.css
@@ -157,62 +157,71 @@ img {
 
 .offerings-container {
     background-color: #FFE550;
-    padding: 113px 51px 124px 16px;
+    padding: 0 51px 124px 16px;
     display: flex;
     gap: 90px;
+    position: relative;
 }
 
 .offerings-div {
     display: flex;
+    justify-content: center;
+    align-items: center;
     width: 550px;
     height: 550px;
     
     border-radius: 550px;
     border: 5px solid rgba(255, 255, 255, 0.50);
     background-color: transparent;
- 
+    margin-top: 167px;
+    
+}
+
+.offerings-ellips {
+    position: absolute;
+    top: 555px;
+    left: 171px;
 }
 
 .offerings-img-div { 
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 502px;
     height: 502px;
     border-radius: 502px;
     background-color: #FEFEFE;
-    
-    margin: 24px;
-}
+}    
 
 .offerings-pic {
-    margin-left: 60px;
-    margin-right: 46px;
-    margin-bottom: 78px;
+    
+    position: absolute;
+    top: 113px;
+    left: 100px;
 
 }
 
 .right-side-div {
-   margin-top: 0;
+   margin-top: 196px;
 } 
 
 .offerings-title {
     font-size: 42px;
     font-weight: 700;
     line-height: 50.4px;
-    margin-top: 83px;
+    
     width: 526.167px;
 }
 .offerings-text {
     display: block;
     line-height: 24px;
     margin-top: 40px;
-    margin-bottom: 96px;
     width: 500px;
 }
 .offerings-list-two {
     display: flex;
     gap: 67px;
-    margin-top: 40px;
-    
-    
+  
 }
 
 .offerings-item {
@@ -220,14 +229,16 @@ img {
 
     position: relative;
     width: 253px;
-    max-height: 181px;
-    padding: 0;
+    height: 181px;
+    padding-top: 56px;
+    margin-top: 40px;
 }
 
 .offerings-icon-div {
     position: absolute;
     top: 0;
-    left: 0;
+    left: 2px;
+
     display: flex;
     align-items: center;
     justify-content: center;
