--- a/css/styles.css
+++ b/css/styles.css
@@ -949,12 +949,9 @@ img {
 /* Footer section */
 .footer-container {
     position: relative;
-    display: flex;
-    justify-content: space-between;
-    padding: 62px 0;
-    margin: 0;
+    padding: 64px 0 60px;
     width: 320px;
-    height: 619px; 
+    height: 619px;
 }
 .footer-apple-img {
     position: absolute;
@@ -971,23 +968,35 @@ img {
     bottom: 0;
     left: 43px;
 }
-
 .background-div-desk {
     display: none;
 }
 .background-div-tabl {
     display: none;
 }
+.footer-div-wrapper {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+}
 
 .footer-left-side {
-    display: block;
-    align-content: space-between;
+    display: flex;
+    justify-content: center;
+
+}
+.nav-link-item:not(:last-child) {
+    margin-bottom: 20px;
 }
 
 .footer-logo {
-    margin-right: 143px;
+    position: absolute;
+    top: 60px;
+    left: 20px;
 }
-
+.footer-nav{
+    margin-bottom: 40px;
+}
 .nav-link {
     display: block;
     font-size: 14px;
@@ -1000,20 +1009,20 @@ img {
 }
 
 /* footer form */
-.footer-right-side {
-    display: block;
-    align-items: center;
-    justify-content: center;
-    margin: 0;
+.footer-form-div {
+    margin-bottom: 60px;
 }
 .subscribe-form {
     display: block;
-    align-items: flex-start;
+    align-items: center;
+    width: 279px;
+    margin-top: 12px;
+    margin-bottom: 20px;
 }
 .subscribe-label {
     font-size: 14px;
     font-weight: 500;
-    line-height: 1.5;  
+    line-height: 1.5;
 }
 .subscribe-form-input {
     width: 100%;
@@ -1042,7 +1051,7 @@ img {
     font-size: 13px;
     font-weight: 500;
     line-height: 1.5;
-    margin-top: 30px;
+    margin-bottom: 24px;
 }
 .subscribe-text-down {
     font-size: 12px;
@@ -1052,12 +1061,20 @@ img {
     color: var(--Dark-green, #7EB101);
     text-decoration-line: underline;
 }
-
+.footer-down-div {
+    margin-bottom: 60px;
+}
+.footer-list-down {
+    display: flex;
+    justify-content: space-between;
+    gap: 32px;
+}
 .subscribe-text-last {
+    text-align: center;
     font-size: 12px;
     margin: 0;
-    margin-top: 80px;
-    margin-left: 224px;
+    margin-top: 40px;
+   
 }
 
 @media screen and (min-width: 768px) {
@@ -1066,7 +1083,7 @@ img {
         display: flex;
         justify-content: space-between;
         padding: 118px 0;
-        margin: 0;
+        margin: 0 auto;
         width: 768px;
         height: 506px;  
     }
@@ -1114,7 +1131,7 @@ img {
         display: flex;
         justify-content: space-between;
         padding: 100px 0;
-        margin: 0;
+        
         width: 1280px;
         height: 395px;  
     }
@@ -1131,6 +1148,12 @@ img {
     .background-div-tabl {
         display: none;
     }
+    .subscribe-text-last {
+    font-size: 12px;
+    margin: 0;
+    margin-top: 80px;
+    margin-left: 224px;
+}
 }
 
 
